--- a/app/views/menu/index.html.haml
+++ b/app/views/menu/index.html.haml
@@ -1,1 +1,48 @@
-= render 'menu_pizzas/menu_pizzas'
+- @seasonal_toppings.each do |s|
+  %p.medium-4.large-4.columns
+    %b
+      = s.name
+    %br
+
+- @menu_toppings.each do |m|
+  %p.medium-4.large-4.columns
+    %b
+      = m.name
+    %br
+
+- @seasonal_pizzas.each do |s|
+  %p.medium-4.large-4.columns
+    %b
+      = s.name
+    %br
+    = s.description
+    %br
+    = s.small_price
+    •
+    = s.medium_price
+    •
+    = s.large_price
+
+- @menu_pizzas.each do |p|
+  %p.medium-4.large-4.columns
+    %b
+      = p.name
+    %br
+    = p.description
+    %br
+    = p.small_price
+    •
+    = p.medium_price
+    •
+    = p.large_price
+
+- @salads.each do |s|
+  %p.medium-4.large-4.columns
+    %b
+      = s.name
+    %br
+    = s.small_price
+    •
+    = s.medium_price
+    •
+    = s.large_price
